--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-baseurl: /starter
+baseurl: /roma
 permalink: pretty
 markdown: kramdown
 paginate: 5
 repo: starter
 github_org: maptime
 maptime:
-  chapter: Meetup name
-  twitter: YourName
+  chapter: Maptime Roma
+  twitter: MaptimeRoma
   #disqus: YOUR DISQUS USERNAME
